--- a/index.html
+++ b/index.html
@@ -1,55 +1,13 @@
 <!DOCTYPE html>
-<html>
-
-        <script src="script.js"></script>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
 <body>
-<h1>Yv</h1>
-<h2>JavaScript Variables</h2>
-
-<p>In this example, x, y, and z are variables.</p>
-
-<p id="demo"></p>
-
-<script>
-var x = 5;
-var y = 6;
-var z = x + y;
-document.getElementById("demo").innerHTML =
-"The value of z is: " + z;
-
-// some calculation
-
-
-var price1 = 5;
-var price2 = 6;
-var total = price1 + price2;
-document.getElementById("demo").innerHTML =
-"The total is: " + total;
-// variable
-
-var carName = "Volvo";
-document.getElementById("demo").innerHTML = carName;
-
-
-
-var person = "John Doe", carName = "Volvo", price = 200;
-document.getElementById("demo").innerHTML = carName;
-
-
-var person = "John Doe",
-carName = "Volvo",
-price = 200;
-
-
-
-var x = 5;
-var y = 2;
-var z = x * y;
-document.getElementById("demo").innerHTML = z;
-</script>
-
-
+    <h1>Hello World by Yves</h1>
+    <script src="index.js"></script>
 </body>
 </html>
-
-
